--- a/gradle.properties
+++ b/gradle.properties
@@ -5,8 +5,8 @@ minecraft_version=1.21.11
 yarn_mappings=1.21.11+build.1
 loader_version=0.18.2
 
-mod_version = 3.11.0
-maven_group = dev.emi
+mod_version = 3.11.0-beta.2+1.21.11
+maven_group = eu.pb4.trinkets.fork
 archives_base_name = trinkets
 
 fabric_version=0.141.2+1.21.11
