--- a/gradle.properties
+++ b/gradle.properties
@@ -6,7 +6,7 @@ yarn_mappings=1.21.11+build.1
 loader_version=0.18.2
 
 mod_version = 3.11.0-beta.2+1.21.11
-maven_group = eu.pb4.trinkets.fork
+maven_group = eu.pb4.fork
 archives_base_name = trinkets
 
 fabric_version=0.141.2+1.21.11
